src/test/ui/reachable/expr_add.stderr
error: unreachable expression
  --> $DIR/expr_add.rs:17:13
   |
LL |     let x = Foo + return;
   |             ^^^^^^^^^^^^
   |
note: lint level defined here
  --> $DIR/expr_add.rs:3:9
   |
LL | #![deny(unreachable_code)]
   |         ^^^^^^^^^^^^^^^^

error: aborting due to previous error

